
DescTools 0.99.5 (2024-03-17)
------------------------------

NEW FUNCTIONS ADDED:
  * as.ym() adds a yearmonth class for extracting dateparts and adding months.
  * as.Date.ym() converts a yearmonth to a date.
  * NALevel() allows to quickly define an alternative level for NAs in a factor.

UPDATED FUNCTIONS:
  * Year(), Month() now also extract the parts from a yearmonth representation.
  * Hodges-Lehman now uses long-longs instead of integers, allowing larger vectors.
  * AddMonthsYM() has been integrated in AddMonths(). Use AddMonths(as.ym(202402)) 
    instead.

BUGFIXES:
  * none




DescTools 0.99.53 (2024-01-17)
------------------------------

NEW FUNCTIONS ADDED:
  * New implementation of 2-sample HodgesLehmann estimator.
  * Fade() combines ColToOpaque(SetAlpha(col))

UPDATED FUNCTIONS:
  * pckg.yaml has a dTri entry now.
  
BUGFIXES:
  * HodgesLehman() mixed up the one sample and two sample case.




DescTools 0.99.52 (2023-11-30)
------------------------------

NEW FUNCTIONS ADDED:
  * dTri(), pTri(), qTri() and rTri() return the specific values for 
    a triangular distribution.

UPDATED FUNCTIONS:
  * New C++ port of the Hodges-Lehman estimator following
    Monahan's algorithm https://dl.acm.org/doi/10.1145/1271.319414.
    (Credits go to Cyril Flurin Moser)
    see: https://github.com/AndriSignorell/DescTools/issues/97

BUGFIXES:
  * Dependency R>=4.3. for DescTools 0.99.51 has been fixed. 


DescTools 0.99.51 (2023-11-19)
------------------------------

NEW FUNCTIONS ADDED:
  * Labels() is a vectorized function for Label().
  * SDN() and VarN() return the uncorrected (biased) estimators for
    standard deviation and variance (sometimes needed for
	  didactical reasons). 
	* EX() and VarX() return the expected value and the variance for
	  the distribution of a discrete random variable.
	* Mgsub() is a vectorized version for gsub, allowing to replace
	  multiple patterns at the same time.