@@ -436,6 +436,7 @@ Desc.formula <- function(formula, data = parent.frame(),
 
         lst[[paste(resp, pred, sep = " ~ ")]] <-
           calcDesc.bivar(x = y, g = x, xname = resp, gname = pred, ...)
+
         lst[[paste(resp, pred, sep = " ~ ")]]["plotit"] <- plotit
         # would not accept vectors when ["digits"] used. Why??:
         lst[[paste(resp, pred, sep = " ~ ")]][["digits"]] <- digits
@@ -740,6 +741,7 @@ calcDesc.ts <- function(x, ...) {
     x = x
   )
 }
+
 calcDesc.table <- function(x, n, conf.level = 0.95, verbose, rfrq, margins,
                            p, digits, ...) {
   # loglik.chisq <- function(r.chisq) {
@@ -999,13 +1001,17 @@ calcDesc.bivar <- function(x, g, xname = NULL, gname = NULL,
     #    res$tab <- table(x[ok], g[ok], useNA=InDots(..., arg="useNA",
     #    default = "no"))
     # do not use x[ok] here, as we could not use NAs in the output
-    res$tab <- table(x, g, useNA = InDots(..., arg = "useNA", default = "no"))
+    
+    # changed 2024-02-03: response should be columns and predictors rows
+    # old: res$tab <- table(x, g, useNA = InDots(..., arg = "useNA", default = "no"))
+    
+    res$tab <- table(g, x, useNA = InDots(..., arg = "useNA", default = "no"))
     res$rfrq <- InDots(..., arg = "rfrq", default = "111")
     res$conf.level <- conf.level
     res$verbose <- verbose
     res$freq <- InDots(..., arg = "freq", default = TRUE)
     res$margins <- InDots(..., arg = "margins", default = c(1, 2))
-    names(dimnames(res$tab)) <- c(xname, gname)
+    names(dimnames(res$tab)) <- c(gname, xname)
   } else {
     return(NA)
   }
