@@ -76,6 +76,7 @@ reference:
 
     # Transform: numeric to factor
     - CutQ
+    - CutAge
 
     # Transform: factor to factor
     - Recode
@@ -686,7 +687,8 @@ reference:
     - Dot
     - Factorize
     - Fibonacci
-    - GCD #- LCM
+    - GCD 
+    - LCM
     - GeomSn
     - Midx
     - Primes
