@@ -6,12 +6,17 @@ NEW FUNCTIONS ADDED:
   * as.ym() adds a yearmonth class for extracting dateparts and adding months.
   * as.Date.ym() converts a yearmonth to a date.
   * NALevel() allows to quickly define an alternative level for NAs in a factor.
+  * CutAge() is a convenient wrapper for cutting age variables in slices 
+    of e.g. 10 years.
 
 UPDATED FUNCTIONS:
   * Year(), Month() now also extract the parts from a yearmonth representation.
   * Hodges-Lehman now uses long-longs instead of integers, allowing larger vectors.
   * AddMonthsYM() has been integrated in AddMonths(). Use AddMonths(as.ym(202402)) 
     instead.
+  * The Desc() procedure now puts the response in columns instead in rows as up to now
+    in the case of two factor variables. So the resulting table is transposed compared
+    to before.
 
 BUGFIXES:
   * none
